examples/valid/04_blocks_and_local_scope.lane
module Examples.Valid04

import Basic.Io.{ println }
import Basic.Ops.*

pub fn factorial(n : Int) -> Int {
  fn loop(x : Int, acc : Int) -> Int {
    if x == 0 {
      acc
    } else {
      loop(x - 1, acc * x)
    }
  }
  loop(n, 1)
}

pub fn shadow_value(x : Int) -> Int {
  let x = x + 1
  let x = x + 1
  x
}

pub fn answer() -> Unit ! Io {
  if factorial(5) == 120 && shadow_value(1) == 3 {
    println("factorial=120 shadow=3")
  } else {
    println("bad:factorial=120 shadow=3")
  }
}
