examples/invalid/14_builtin_without_expected_type.lane
module Examples.Invalid14
// invalid: builtin requires a direct expected type
pub fn bad() -> Int {
  let x = builtin("%anything")
  x
}
